# mesa

./: configure.ac  meson.build  meson_options.txt
docs/: features.txt
include/drm-uapi/: i915_drm.h
src/amd/vulkan/: radv_extensions.py
src/compiler/: Makefile.sources  glsl_types.cpp  glsl_types.h
src/compiler/glsl/: ast_array_index.cpp  ast_function.cpp  ast_to_hir.cpp  ast_type.cpp  builtin_functions.cpp  builtin_functions.h  glsl_to_nir.cpp  ir.h  ir_constant_expression.cpp  ir_validate.cpp  linker.cpp  loop_controls.cpp  loop_unroll.cpp  lower_distance.cpp  lower_vec_index_to_swizzle.cpp  lower_vector_derefs.cpp  opt_algebraic.cpp  opt_constant_folding.cpp  opt_constant_propagation.cpp  opt_if_simplification.cpp
src/compiler/nir/: nir.c  nir.h  nir_intrinsics.py  nir_opt_commutative_constant_folding.c  nir_opt_flatten_nested_ifs.c  nir_opt_swizzle_swizzle.c  nir_validate.c
src/compiler/spirv/: spirv_to_nir.c  vtn_private.h  vtn_variables.c
src/egl/drivers/dri2/: platform_wayland.c
src/gallium/: meson.build
src/gallium/drivers/freedreno/: meson.build
src/gallium/drivers/iris/: iris_resource.c
src/intel/: Android.genxml.mk  Android.igs.mk  Makefile.am  Makefile.aubinator.am  Makefile.genxml.am  Makefile.igs.am  Makefile.isl.am  Makefile.sources  Makefile.tools.am  meson.build
src/intel/blorp/: blorp.h  blorp_blit.c  blorp_clear.c
src/intel/common/: gen_batch_decoder.c  gen_debug.c  gen_debug.h  gen_decoder.c  gen_decoder.h  gen_device_info.c  gen_device_info.h  gen_l3_config.c  gen_mi_builder.h  gen_mi_builder_types.h
src/intel/compiler/: brw_eu_compact.c  brw_eu_validate.c  brw_fs_builder.h  brw_fs_nir.cpp  brw_fs_visitor.cpp  brw_vec4_cmod_propagation.cpp
src/intel/dev/: gen_device_info.c  gen_device_info.h
src/intel/genxml/: .gitignore  aubinator.py  gen.py  gen10.xml  gen11.xml  gen12.xml  gen4.xml  gen45.xml  gen5.xml  gen6.xml  gen7.xml  gen75.xml  gen8.xml  gen9.py  gen9.xml  gen_print_header.py  gen_xml_to_py.py
src/intel/igs/: com.intel.GPU.conf  com.intel.GPU.policy  com.intel.GPU.rules  com.intel.GPU.service.in  com.intel.GPU.xml  igs_client.h  igs_dbus_client.c  igs_frequency_override.c  igs_frequency_override.h  igs_ioctl_client.c  igs_server.c  igs_server.h  igs_util.c  igs_util.h  intel-gpu-service.service.in  main.c  meson.build
src/intel/isl/: isl.c  isl.h  isl_drm.c
src/intel/isl/tests/: .gitignore  isl_surf_get_image_depth_pitch_test.c
src/intel/perf/: gen_perf.c  gen_perf.h  gen_perf.py  gen_perf_private.h  meson.build  oa-sklgt2.xml
src/intel/tools/: .gitignore  Makefile.am  aub_mem.c  aub_read.c  aub_read.h  aub_write.c  aub_write.h  aubinator.c  aubinator_batch_decoder.c  aubinator_batch_decoder.h  aubinator_decoder.c  aubinator_decoder.h  aubinator_disasm.c  aubinator_disasm.h  aubinator_error_decode.c  aubinator_imgui_widgets.cpp  aubinator_imgui_widgets.h  aubinator_ui.cpp  aubinator_viewer.cpp  aubinator_viewer.h  aubinator_viewer_decoder.cpp  aubinator_viewer_urb.h  decoder.c  decoder.h  disasm.c  error2aub.c  gen_context.h  gen_disasm.h  intel_aub.h  intel_dump_gpu.c  intel_sanitize_gpu.in  memory.c  memory.h  meson.build
src/intel/tools/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_gtk3_cogl.cpp  imgui_impl_gtk3_cogl.h  imgui_internal.h
src/intel/vulkan/: Makefile.sources  TODO  anv_allocator.c  anv_batch_chain.c  anv_blorp.c  anv_cmd_buffer.c  anv_descriptor_set.c  anv_device.c  anv_dump.c  anv_extensions.py  anv_formats.c  anv_genX.h  anv_image.c  anv_nir.h  anv_nir_analyze_ubo_ranges.c  anv_nir_apply_pipeline_layout.c  anv_nir_gen7_border_color_wa.c  anv_nir_lower_ycbcr_textures.c  anv_perf.c  anv_pipeline.c  anv_private.h  anv_queue.c  anv_wsi.c  genX_cmd_buffer.c  genX_gpu_memcpy.c  genX_pipeline.c  genX_query.c  genX_state.c  vk_format_info.h
src/mesa/drivers/dri/i965/: Android.mk  Makefile.am  Makefile.sources  brw_binding_tables.c  brw_blorp.c  brw_clear.c  brw_clip.c  brw_clip_state.c  brw_compiler.h  brw_compute.c  brw_context.c  brw_context.h  brw_cs.c  brw_curbe.c  brw_defines.h  brw_draw.c  brw_draw_upload.c  brw_ff_gs.c  brw_fs.cpp  brw_fs_nir.cpp  brw_gs.c  brw_gs_state.c  brw_link.cpp  brw_meta_util.c  brw_misc_state.c  brw_nir.c  brw_nir.h  brw_nir_analyze_ubo_ranges.c  brw_oa.py  brw_oa_bdw.xml  brw_oa_chv.xml  brw_oa_hsw.xml  brw_oa_skl.xml  brw_performance_query.c  brw_performance_query.h  brw_pipe_control.c  brw_program.c  brw_program_cache.c  brw_queryobj.c  brw_sampler_state.c  (+57 more)
src/mesa/main/: enable.c  extensions_table.h  mtypes.h
src/mesa/program/: ir_to_mesa.cpp
src/util/: Makefile.am  Makefile.sources  meson.build  ralloc.c  ralloc.h  u_vector.c
src/util/genasm/: Makefile  debug.c
src/util/genasm/hstubs/linux/: types.h
src/util/tests/rb_tree/: Makefile.am  meson.build  rb_tree_random_test.c
src/vulkan/util/: vk_util.h
src/vulkan/wsi/: wsi_common.c  wsi_common.h  wsi_common_private.h  wsi_common_x11.c
